[gd_scene load_steps=3 format=3 uid="uid://bdcglf40u43lp"]

[ext_resource type="Script" uid="uid://b3tauqilpfh6c" path="res://kill_zone.gd" id="1_tuh0n"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tuh0n"]

[node name="KillZone" type="Area2D"]
script = ExtResource("1_tuh0n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(540, 205)
rotation = 3.1415927
shape = SubResource("WorldBoundaryShape2D_tuh0n")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
